# AcceleratedLinearAlgebra

./: CMakeLists.txt  README.md  arraytest.cbp  datablock.h  datablock_gpu_memory_functions.h  datablock_host_memory_functions.h  datablock_mpifunctions.h  datablockcontainer.h  datablocktests.cpp  datablockutilities.h  datastruct.h  datastruct_gpu_memory_functions.h  datastruct_mpifunctions.h  expression_templates.h  gpu_mathfunctions.h  gpu_memory_functions.h  host_memory_functions.h  indiceshelperfunctions.h  inkernel_mathfunctions.h  main_acc.cpp  main_mpi.cpp  main_omp.cpp  mathdemonstrations.cpp  mathfunctions_mpi.h  mdspan_acc.h  mdspan_data.h  mdspan_omp.h  mdspantests.cpp  mdspanutilities.h  sparsetests.cpp
archive/: cmakelists.txt  main_acc.cpp  mdspan_acc.h
development/: CMakeLists.txt  Readme.txt  datastruct.h  datastruct_host_memory_functions.h  datastructtests.cpp  gpu_mathfunctions.h  indiceshelperfunctions.h  inkernel_mathfunctions.h  main_acc.cpp  mdspan_acc.h  mdspan_data.h
development/openmp/: 01-openmpi-clang-cuda-memhost-register-message.patch  CMakeLists.txt  arraytest.cbp  cmakelists.txt  datablock.h  datablock_gpu_memory_functions.h  datablock_host_memory_functions.h  datablock_mpifunctions.h  datablockcontainer.h  datablocktests.cpp  datastruct.h  datastruct_gpu_memory_functions.h  expression_templates.h  gpu_mathfunctions.h  gpu_memory_functions.h  host_memory_functions.h  indiceshelperfunctions.h  inkernel_mathfunctions.h  main_mpi.cpp  main_omp.cpp  mathdemonstrations.cpp  mathfunctions.h  mathfunctions_mpi.h  mdspan_data.h  mdspan_omp.h  mdspantests.cpp  readme.txt  sparsetests.cpp
